# personal-site

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
static/favicon/: site.webmanifest
templates/: communication.html  layout.html  projects.html
