[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = "Paulo's personal website"
authors = ["Paulo Costa <Paulo.S.Costa.5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"
black = "^21.7b0"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
flake8-annotations = "^2.6.2"
typeguard = "^2.12.1"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
